# Free-Cell-Game

./: CMakeLists.txt  Makefile  README.md
include/: Card.h  Deck.h
include/FCG/: Board.h  Card.h  Deck.h  Game.h
libs/Console/: CMakeLists.txt
libs/Console/include/Console/: Console.h
libs/Console/src/: Console.cpp
src/: Board.cpp  Card.cpp  Card.h  Deck.cpp  Deck.h  Game.cpp  Table.h  cards.txt  main.cpp
